fix: modal overflow

--- a/src/styles/toolbar/information.scss
+++ b/src/styles/toolbar/information.scss
@@ -6,7 +6,7 @@
   @apply max-w-2xl;
 
   .modal-content {
-    @apply overflow-auto max-h-140;
+    @apply max-h-140;
   }
 }
 
